# project-perabird

./: .gitignore  CMakeLists.txt  README
cmake/: FindAGuiSy.cmake
data/: character.blend  fragment.glsl  vertex.glsl
data/character/: character.blend
data/gui/: entry.xcf  template.xcf
data/maps/test/: terrain.png.old
data/shaders/map/: fragment.glsl
data/shaders/simple/: fragment.glsl  vertex.glsl
data/shaders/water/: fragment.glsl
server/: auth.db  msgparser.py  protocol.py  user.py  userthread.py
src/: Connection.cpp  Connection.h  Forms.cpp  Game.cpp  Game.h  Map.cpp  Map.h  Mesh.cpp  Mesh.h  Player.cpp  Player.h  Resources.h  Socket.cpp  Socket.h  Tools.h  main.cpp  sdlglutils.cpp  sdlglutils.h  utils.cpp  utils.h
util/: authdb_tool.py
